--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:sqlserver://kommunevalg.database.windows.net:1433;database=kommunevalg;user=jonasegehrke@kommunevalg;password=Eksamen!;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=jonasegehrke
+spring.datasource.password=Eksamen!
 
+spring.jpa.hibernate.ddl-auto=update
